Make clicking on Dock icon restore last minimized window. b=389423 r=joshmoz sr=benjamin